--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/voteOption_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/voteOption_list.html
@@ -72,7 +72,7 @@
             <!-- 选项表单信息 -->
             <div class="cv_content_square">
                 <el-form :model="voteOptForm" :rules="voteOptFormRules" ref="voteOptForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
-                    <!-- <el-row class="el-row-h70">
+                    <el-row class="el-row-h70">
                         <el-col :span="12">
                             <el-form-item label="投票编号" prop="voteId" style="margin:0;">
                                 <el-input
@@ -82,7 +82,7 @@
                                 </el-input>
                             </el-form-item>
                         </el-col>
-                    </el-row> -->
+                    </el-row>
                     <el-row class="el-row-h70">
                         <el-col :span="24">
                             <el-form-item label="投票选项名称" label-width="15%" prop="voteOptionName" style="margin:0;">
