--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
@@ -1,1 +1,138 @@
-会议组图
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
+
+<title>高清组图管理</title>
+</head>
+<body>
+    <#include "/header.html">
+    <div class="cvpage_title_common">高清组图管理</div>
+    <div id="meeting_hdpicture" class="cv_page_content">
+        <div class="cv_content_square">
+            <!------------------列表开始------------------>
+            <div v-show="!showChildPage">
+                <el-form :model="searchForm" status-icon class="demo-ruleForm" style="width: 100%"  @submit.native.prevent>
+                    <el-row class="el-row-h60">
+                        <el-col :span="7">
+                            <el-form-item label="所属会议编号" label-width="40%" style="margin:0;">
+                                <el-input
+                                clearable
+                                v-model="searchForm.diagramMeetingId"
+                                placeholder="输入编号"
+                                type="text"
+                                auto-complete="off"></el-input>
+                            </el-form-item>
+                        </el-col>
+                        <el-col :span="12">
+                            <el-form-item label="所属会议名称" label-width="25%" style="margin:0;">
+                                <el-input
+                                clearable
+                                v-model="searchForm.diagramMeetingId"
+                                placeholder="输入会议名称"
+                                type="text"
+                                auto-complete="off"></el-input>
+                            </el-form-item>
+                        </el-col>
+                        <el-col :span="2" :offset="1" class="el-row-h40">
+                            <el-button style="width:100%" @click="startSearch(0)">搜索</el-button>
+                        </el-col>
+                    </el-row>
+                </el-form>
+                <!--功能按钮区-->
+            <el-row class="el-row-h50">
+                    <el-col :span="3">
+                        <el-button type="primary" type="primary" style="width:100%" @click="addOrEditPic(0)">新建高清组图</el-button>
+                    </el-col>
+                </el-row>
+                <!--表格查询结果区-->
+                <div class="cv_content_square">
+                    <el-table :data="tableData" style="width: 100%; margin: 10px auto;" stripe>
+                        <el-table-column prop="diagramMeetingId" width="160" label="会议详情编号"></el-table-column>
+                        <el-table-column prop="" width="420" label="会议详情名称"></el-table-column>
+                        <el-table-column prop="diagramCrtTime" width="180" label="创建时间"></el-table-column>
+                        <el-table-column prop="userName" width="100" label="创建人"></el-table-column>
+                        <el-table-column label="操作"  fixed="right">
+                            <template slot-scope="scope">
+                                <el-button type="text" size="small" @click="addOrEditPic(1,scope.row)">编辑</el-button>
+                                <el-button type="text" size="small" @click="checkDiagramDetail(scope.row)" >详情</el-button>
+                                <el-button type="text" size="small" @click="deleteThisDiagram(scope.row)">删除</el-button>
+                            </template>
+                        </el-table-column>
+                    </el-table>
+                </div>
+                <!--分页器-->
+                <div class="cv_page_zone">
+                    <el-pagination
+                        @current-change="handleCurrentChange"
+                        :current-page="pagination1.currPage"
+                        :page-size="pagination1.pageSize"
+                        layout="total, prev, pager, next, jumper"
+                        :total="pagination1.totalCount">
+                    </el-pagination>
+                </div>
+            </div>
+            
+        </div>
+        <!------------------列表结束------------------>
+        <!------------------新建高清组图开始------------------>
+        <div v-show="showChildPage">
+            <div class="cv_content_square">
+                <el-form :model="diagramForm" :rules="diagramFormRules" ref="diagramForm" label-position="left" status-icon class="demo-ruleForm" label-width="13%" label-position="right">
+                    <el-row class="el-row-h70">
+                        <el-col :span="18">
+                            <el-form-item label="所属会议详情编号" label-width="20%" prop="diagramMeetingId" style="margin:0;">
+                                <el-input
+                                    clearable
+                                    type="text"
+                                    placeholder="请输入所属会议详情编号"
+                                    v-model="diagramForm.diagramMeetingId"
+                                    auto-complete="off"
+                                    :disabled="creatOrEdit == 1"
+                                    ></el-input>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                    <el-row class="el-row-h70">
+                        <el-col :span="18">
+                            <el-form-item label="高清组图名称" label-width="20%" prop="diagramTitle" style="margin:0;">
+                                <el-input
+                                    clearable
+                                    type="text"
+                                    placeholder="高清组图名称"
+                                    v-model="diagramForm.diagramTitle"
+                                    auto-complete="off"
+                                    maxlength="36"
+                                    ></el-input>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                </el-form>
+                <el-row style="margin-top: 30px">
+                    <el-col class="el-row-h40" :span="2">
+                        <el-button type="primary" style="width: 100%" @click="testSubmit('diagramForm')">保存</el-button>
+                    </el-col>
+                    <el-col class="el-row-h40" :span="2" :offset="1">
+                        <el-button type="primary" style="width: 100%" @click="closeCreatOrEdit('diagramForm')">取消</el-button>
+                    </el-col>
+                </el-row>
+
+
+
+
+            </div>
+        </div>
+
+
+
+        <!------------------新建高清组图结束------------------>
+
+    </div>
+
+</body>
+<script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.min.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.base64.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/modules/meeting/meeting_hdpicture.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
+</html>
