--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
@@ -118,7 +118,6 @@
                                         placeholder="请输入投票名称"
                                         v-model="voteForm.voteTitle"
                                         auto-complete="off"
-                                        
                                         ></el-input>
                                 </el-form-item>
                             </el-col>
@@ -136,25 +135,21 @@
                                 </el-form-item>
                             </el-col>
                         </el-row>
-                        <div v-for="(item,index) in voteForm.voteOptions" style="margin-top:20px;">
-                            <el-row>
-                                <el-col :span="18" class="el-row-h70">
-                                    <el-form-item label="选项" label-width="12%" prop="voteOptions" style="margin:0;">
-                                        <el-input
-                                            clearable
-                                            type="text"
-                                            placeholder="请输入选项内容"
-                                            v-model="item.optionsText"
-                                            auto-complete="off"
-                                            :disabled="true"></el-input>
-                                    </el-form-item>
-                                </el-col>
-                                <el-col :span="2" :offset="1" style="margin-top: 0px">
-                                    <el-button size="medium" type="primary" icon="el-icon-plus" @click="addOptions()" circle ></el-button>
-                                </el-col>
-                            </el-row> 
-                        </div>
-                        
+                        <el-row>
+                            <el-col :span="18" class="el-row-h70">
+                                <el-form-item label="选项1" label-width="12%" prop="voteOptions" style="margin:0;">
+                                    <el-input
+                                        clearable
+                                        type="text"
+                                        placeholder="请输入选项内容"
+                                        auto-complete="off"
+                                        :disabled="true"></el-input>
+                                </el-form-item>
+                            </el-col>
+                            <el-col :span="2" :offset="1" style="margin-top: 0px">
+                                <el-button size="medium" type="primary" icon="el-icon-plus" @click="addOptions()" circle ></el-button>
+                            </el-col>
+                        </el-row> 
                     </el-form>
                     <el-row style="margin-top: 30px">
                         <el-col class="el-row-h40" :span="2">
@@ -164,6 +159,9 @@
                             <el-button type="primary" style="width: 100%" @click="closeCreatOrEdit('voteForm')">取消</el-button>
                         </el-col>
                     </el-row>
+
+                    
+
                 </div>
             </div>
             <!----------------- 新增投票结束 ------------------>
@@ -199,9 +197,6 @@
                 </div>
             </div>
         </div>
-
-
-
     </div>
 </body>
 <script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.min.js"></script>
