--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meeting.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meeting.html
@@ -1190,7 +1190,7 @@
                                 <el-form-item label="投票Id" prop="" label-width="18%" style="margin:0;">
                                     <el-input
                                         :disabled="true"
-                                        v-model="meetingForm.voteId"
+                                        v-model="meetingForm.meetingVoteId"
                                         auto-complete="off">
                                     </el-input>
                                 </el-form-item>
@@ -1345,7 +1345,7 @@
                                 <el-form-item label="文章问答Id" prop="" label-width="18%" style="margin:0;">
                                     <el-input
                                         :disabled="true"
-                                        v-model="meetingForm.interactionId"
+                                        v-model="meetingForm.meetingInteractionId"
                                         auto-complete="off">
                                     </el-input>
                                 </el-form-item>
@@ -1500,7 +1500,7 @@
                                 <el-form-item label="高清组图Id" prop="" label-width="18%" style="margin:0;">
                                     <el-input
                                         :disabled="true"
-                                        v-model="meetingForm.diagramId"
+                                        v-model="meetingForm.meetingDiagramId"
                                         auto-complete="off">
                                     </el-input>
                                 </el-form-item>
